--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "expo-barcode-scanner": "~11.4.0",
     "expo-file-system": "~14.1.0",
     "expo-sharing": "~10.3.0",
-    "react-native-gesture-handler": "~2.5.0"
+    "react-native-gesture-handler": "~2.5.0",
+    "expo-updates": "~0.14.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
