--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
     "expo": "~46.0.16",
+    "expo-av": "~12.0.4",
+    "expo-barcode-scanner": "~11.4.0",
     "expo-document-picker": "~10.3.0",
+    "expo-file-system": "~14.1.0",
+    "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
+    "expo-updates": "~0.14.7",
     "react": "18.0.0",
     "react-native": "0.69.6",
     "react-native-dialog": "^9.3.0",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-modal-datetime-picker": "^14.0.0",
     "react-native-safe-area-context": "4.3.1",
-    "react-native-screens": "~3.15.0",
-    "expo-av": "~12.0.4",
-    "expo-barcode-scanner": "~11.4.0",
-    "expo-file-system": "~14.1.0",
-    "expo-sharing": "~10.3.0",
-    "react-native-gesture-handler": "~2.5.0",
-    "expo-updates": "~0.14.6"
+    "react-native-screens": "~3.15.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
